creating new player adds them to roster

--- a/GameLogin/Views/Admins/Roster.cshtml
+++ b/GameLogin/Views/Admins/Roster.cshtml
@@ -66,7 +66,7 @@
     <div>
         <table style="margin-left:auto; margin-right:auto">
             <tr>
-                <td style="padding:8px; width:130px; cursor: pointer;" onmouseout="this.style.background='#1e1e1e'" onmouseover="this.style.background='#494949'"><a style="text-decoration:none">@Html.ActionLink("ADMIN", "Home", "Admins", null, new { style = "color:white; padding:23px" })</a></td>
+                <td style="padding:8px; width:130px; cursor: pointer;" onmouseout="this.style.background='#1e1e1e'" onmouseover="this.style.background='#494949'"><a style="text-decoration:none">@Html.ActionLink("GAME STATUS", "Home", "Admins", null, new { style = "color:white; padding:23px" })</a></td>
                 <td style="padding:8px; width:130px; cursor: pointer;" onmouseout="this.style.background='#1e1e1e'" onmouseover="this.style.background='#494949'"><a style="text-decoration:none">@Html.ActionLink("SYSTEM", "System", "Admins", null, new { style = "color:white; padding:23px" })</a></td>
                 <td style="padding:8px; width:130px; cursor: pointer;" onmouseout="this.style.background='#1e1e1e'" onmouseover="this.style.background='#494949'"><a style="text-decoration:none">@Html.ActionLink("EDIT PLAYER", "Index", "Players", null, new { style = "color:white; padding:23px" })</a></td>
                 <td style="padding:8px; width:130px; cursor: pointer;" onmouseout="this.style.background='#1e1e1e'" onmouseover="this.style.background='#494949'"><a style="text-decoration:none">@Html.ActionLink("ADD PLAYER", "Create", "Players", null, new { style = "color:white; padding:23px" })</a></td>
