--- a/GameLogin/Views/Players/Create.cshtml
+++ b/GameLogin/Views/Players/Create.cshtml
@@ -8,7 +8,7 @@
     <div>
         <table style="margin-left:auto; margin-right:auto">
             <tr>
-                <td style="padding:8px; width:130px; cursor: pointer;" onmouseout="this.style.background='#1e1e1e'" onmouseover="this.style.background='#494949'"><a style="text-decoration:none">@Html.ActionLink("ADMIN", "Home", "Admins", null, new { style = "color:white; padding:23px" })</a></td>
+                <td style="padding:8px; width:130px; cursor: pointer;" onmouseout="this.style.background='#1e1e1e'" onmouseover="this.style.background='#494949'"><a style="text-decoration:none">@Html.ActionLink("GAME STATUS", "Home", "Admins", null, new { style = "color:white; padding:23px" })</a></td>
                 <td style="padding:8px; width:130px; cursor: pointer;" onmouseout="this.style.background='#1e1e1e'" onmouseover="this.style.background='#494949'"><a style="text-decoration:none">@Html.ActionLink("SYSTEM", "System", "Admins", null, new { style = "color:white; padding:23px" })</a></td>
                 <td style="padding:8px; width:130px; cursor: pointer;" onmouseout="this.style.background='#1e1e1e'" onmouseover="this.style.background='#494949'"><a style="text-decoration:none">@Html.ActionLink("EDIT PLAYER", "Index", "Players", null, new { style = "color:white; padding:23px" })</a></td>
                 <td style="padding:8px; width:130px; cursor: pointer;" onmouseout="this.style.background='#1e1e1e'" onmouseover="this.style.background='#494949'"><a style="text-decoration:none">@Html.ActionLink("ADD PLAYER", "Create", "Players", null, new { style = "color:white; padding:23px" })</a></td>
@@ -22,7 +22,8 @@
     </div>
 </div>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm("Create", "Players", FormMethod.Post, null))
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
@@ -115,6 +116,13 @@
         <div class="editor-field">
             @Html.EditorFor(model => model.Active)
             @Html.ValidationMessageFor(model => model.Active)
+        </div>
+
+        <div class="editor-label">
+            Roster Name
+        </div>
+        <div class="editor-field">
+            <input type="text" name="rosterName" />
         </div>
 
         <p>
